# protoc-gen-rust-temporal

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  SPEC.md  WIRE-FORMAT.md  buf.plugin.yaml
.github/workflows/: ci.yml  interop.yml  release.yml
.playwright-cli/: page-2026-05-13T23-35-09-456Z.yml
compat-tests/: README.md
compat-tests/fixtures/: empty_input.input.json  empty_input.rust.payload.json  job_batch.go.payload.json  job_batch.input.json  job_choice_input.go.payload.json  job_choice_input.input.json  job_choice_name.input.json  job_choice_name.rust.payload.json  job_enum_batch.input.json  job_enum_batch.rust.payload.json  job_enum_zero.input.json  job_enum_zero.rust.payload.json  job_input.go.payload.json  job_input.input.json  job_list.input.json  job_list.rust.payload.json  job_map.go.payload.json  job_map.input.json
compat-tests/go/: .gitignore  go.mod  go.sum  main.go
compat-tests/rust/: Cargo.toml  build.rs
compat-tests/rust/proto/jobs/v1/: jobs.proto
compat-tests/rust/src/: main.rs
crates/protoc-gen-rust-temporal/: Cargo.toml  build.rs
crates/protoc-gen-rust-temporal/src/: lib.rs  main.rs  model.rs  options.rs  parse.rs  render.rs  validate.rs
crates/protoc-gen-rust-temporal/tests/: generated_surface_compile.rs  golden.rs  parse_validate.rs  protoc_invoke.rs
crates/protoc-gen-rust-temporal/tests/fixtures/activities_emit/: expected.rs  input.proto
crates/protoc-gen-rust-temporal/tests/fixtures/activity_only/: expected.rs  input.proto
crates/protoc-gen-rust-temporal/tests/fixtures/cli_emit/: expected.rs  input.proto  options.txt
crates/protoc-gen-rust-temporal/tests/fixtures/cli_ignore/: expected.rs  input.proto
crates/protoc-gen-rust-temporal/tests/fixtures/empty_input_workflow/: expected.rs  input.proto
crates/protoc-gen-rust-temporal/tests/fixtures/empty_output_query_update/: expected.rs  input.proto
crates/protoc-gen-rust-temporal/tests/fixtures/full_workflow/: expected.rs  input.proto
crates/protoc-gen-rust-temporal/tests/fixtures/minimal_workflow/: expected.rs  input.proto
crates/protoc-gen-rust-temporal/tests/fixtures/multiple_workflows/: expected.rs  input.proto
crates/protoc-gen-rust-temporal/tests/fixtures/worker_activities_only/: expected.rs  input.proto  options.txt
crates/protoc-gen-rust-temporal/tests/fixtures/worker_full/: expected.rs  input.proto  options.txt
crates/protoc-gen-rust-temporal/tests/fixtures/worker_workflow_aliases/: expected.rs  input.proto
crates/protoc-gen-rust-temporal/tests/fixtures/worker_workflow_only/: expected.rs  input.proto  options.txt
crates/protoc-gen-rust-temporal/tests/fixtures/workflow_aliases/: expected.rs  input.proto
crates/protoc-gen-rust-temporal/tests/fixtures/workflow_only/: expected.rs  input.proto
crates/protoc-gen-rust-temporal/tests/fixtures/workflows_emit/: expected.rs  input.proto
crates/temporal-proto-runtime/: Cargo.toml
crates/temporal-proto-runtime-bridge/: Cargo.toml  README.md
crates/temporal-proto-runtime-bridge/src/: lib.rs
crates/temporal-proto-runtime/src/: lib.rs
docs/: R7-BLOBLANG.md  RUNTIME-API.md  SUPPORT-STATUS.md  bsr-publish.md  sdk-shape-worker.md  sdk-shape.md
docs/superpowers/plans/: 2026-05-12-phase-1-bridge-crate.md  2026-05-12-phase-2-activities.md
docs/superpowers/specs/: 2026-05-12-cludden-parity-design.md  2026-05-12-phase-2-spike-findings.md  2026-05-12-phase-3-spike-findings.md  2026-05-13-worker-emit-v1-scope.md
examples/job-queue/: .gitignore  AGENTS.md  README.md  SPEC.md  justfile
examples/job-queue-integration/: Cargo.toml  README.md  buf.gen.yaml  build.rs  justfile
examples/job-queue-integration/proto/jobs/v1/: jobs.proto
examples/job-queue-integration/src/: lib.rs  temporal_runtime.rs
examples/job-queue/crates/job-api/: Cargo.toml
examples/job-queue/crates/job-api/src/: lib.rs  main.rs
examples/job-queue/crates/job-worker/: Cargo.toml
examples/job-queue/crates/job-worker/src/: lib.rs  main.rs  state.rs
examples/job-queue/crates/job-worker/tests/: generated_temporal_e2e.rs
examples/job-queue/crates/jobctl/: Cargo.toml
examples/job-queue/crates/jobctl/src/: main.rs
examples/job-queue/crates/jobs-proto/: Cargo.toml  build.rs
examples/job-queue/crates/jobs-proto/src/: lib.rs
examples/job-queue/crates/jobs-proto/tests/: build_marker.rs
examples/job-queue/proto/: buf.gen.yaml  buf.yaml
examples/job-queue/proto/jobs/v1/: jobs.proto
examples/job-queue/scripts/: dev.py  e2e.sh
