[workspace]
resolver = "2"
members = [
    "crates/protoc-gen-rust-temporal",
    "crates/temporal-proto-runtime",
    "crates/temporal-proto-runtime-bridge",
    "compat-tests/rust",
    "examples/job-queue-integration",
]

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/nu-sync/protoc-gen-rust-temporal"
homepage = "https://github.com/nu-sync/protoc-gen-rust-temporal"
authors = ["nu-sync contributors"]

[workspace.dependencies]
anyhow = "1"
prost = "0.13"
prost-types = "0.13"
prost-reflect = "0.14"
prost-build = "0.13"
heck = "0.5"
# Phase 1 bridge crate dependencies. Exact-patch pin on the SDK is intentional
# (design §"SDK pinning"): when temporalio-sdk 0.5 ships, we cut a new bridge
# crate minor version; plugin emit stays unchanged.
temporalio-client = "=0.4.0"
temporalio-common = "=0.4.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
