[package]
name = "compat-tests-rust"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "compat-tests-rust"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
prost-reflect = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
temporal-proto-runtime = { path = "../../crates/temporal-proto-runtime" }

[build-dependencies]
prost-build = { workspace = true }
