[package]
name = "temporal-proto-runtime-bridge"
version = "0.1.0"
description = "Default bridge between protoc-gen-rust-temporal generated clients and temporalio-client 0.4. Drop-in `temporal_runtime` facade."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["temporal", "protobuf", "workflow", "client"]
categories = ["asynchronous"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, optional = true }
prost = { workspace = true }
prost-wkt-types = { workspace = true }
temporal-proto-runtime = { path = "../temporal-proto-runtime", version = "0.1", features = ["sdk"] }
temporalio-client = { workspace = true }
temporalio-common = { workspace = true }
temporalio-sdk = { workspace = true, optional = true }
url = { workspace = true }
uuid = { workspace = true }

[features]
default = []
# Worker-side primitives for consumers writing activity/workflow workers
# against the generated <Service>Activities / <Workflow> traits. Pulls in
# temporalio-sdk = "=0.4.0". The plugin's client-side emit does NOT depend
# on this feature.
worker = ["dep:temporalio-sdk"]
# Pulls in clap = "4" with the derive feature. Plugin emits
# `#[derive(temporal_runtime::clap::Parser)]` etc. when `--rust-temporal_opt=cli=true`
# is set, so generated CLIs require the consumer to enable this feature.
cli = ["dep:clap"]

[dev-dependencies]
tokio = { workspace = true }
