[package]
name = "temporal-proto-runtime"
version = "0.1.1"
description = "Runtime helpers for protoc-gen-rust-temporal generated clients (TypedProtoMessage wire-format glue)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["temporal", "protobuf", "workflow"]
categories = ["asynchronous"]

[dependencies]
prost = { workspace = true }
temporalio-common = { version = "0.4", optional = true }

[features]
default = []
# Pulls in `temporalio-common` and emits the
# `TemporalSerializable`/`TemporalDeserializable` impls for
# `TypedProtoMessage<T>`. Enable this in consumer crates so the orphan
# rule does not force them to redefine the wrapper locally.
sdk = ["dep:temporalio-common"]
