# Example consumer crate for protoc-gen-rust-temporal. Included as a
# workspace member so `cargo build --workspace` catches regressions where
# the plugin's rendered output stops compiling against the documented
# facade (`src/temporal_runtime.rs`). The example deliberately stubs the
# Temporal SDK out (`todo!()` bodies) so the workspace stays SDK-free in CI.
#
# To use this as a starting template: copy the directory into your repo,
# drop the `[package.metadata.example]` block below, and replace the
# stubbed bodies with calls into `temporalio-client` / `temporalio-sdk`.

[package]
name = "job-queue-integration-example"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
temporal-proto-runtime = { path = "../../crates/temporal-proto-runtime" }
# Phase-1 bridge crate — opt-in via `bridge` feature. Default builds keep
# the stub temporal_runtime.rs so the example stays SDK-free in CI.
temporal-proto-runtime-bridge = { path = "../../crates/temporal-proto-runtime-bridge", optional = true }

[features]
default = []
# Swap the stub temporal_runtime.rs for the real bridge crate. Builds with
# real SDK calls — used by `just verify-bridge` to prove the bridge is wire-
# compatible with the plugin's generated emit.
bridge = ["dep:temporal-proto-runtime-bridge"]

[build-dependencies]
prost-build = { workspace = true }
