# Example consumer crate for protoc-gen-rust-temporal. Included as a
# workspace member so `cargo build --workspace` catches regressions where
# the plugin's rendered output stops compiling against the documented
# facade (`src/temporal_runtime.rs`). The example deliberately stubs the
# Temporal SDK out (`todo!()` bodies) so the workspace stays SDK-free in CI.
#
# To use this as a starting template: copy the directory into your repo,
# drop the `[package.metadata.example]` block below, and replace the
# stubbed bodies with calls into `temporalio-client` / `temporalio-sdk`.

[package]
name = "job-queue-integration-example"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
temporal-proto-runtime = { path = "../../crates/temporal-proto-runtime" }
# Phase-1 bridge crate — opt-in via `bridge` feature. Default builds keep
# the stub temporal_runtime.rs so the example stays SDK-free in CI. The
# checked-in snapshot enables worker emit, so the bridge path also enables
# the bridge's worker re-exports.
temporal-proto-runtime-bridge = { path = "../../crates/temporal-proto-runtime-bridge", optional = true }

[features]
default = []
# Swap the stub temporal_runtime.rs for the real bridge crate. Builds with
# real SDK calls — used by `just verify-bridge` to prove the bridge is wire-
# compatible with the plugin's generated emit.
bridge = ["dep:temporal-proto-runtime-bridge", "temporal-proto-runtime-bridge/worker"]
# Phase 2: also pull the bridge's `worker` feature so we exercise the
# SDK-worker re-exports through the example's dep tree. Implies `bridge`.
worker = ["bridge"]
# Phase 4: pull the bridge's `cli` feature so the example exercises the
# clap re-export. The example's generated emit doesn't yet include CLI
# (regen would need `--rust-temporal_opt=cli=true`), so this just confirms
# the bridge re-export compiles in the consumer's dep tree.
cli = ["bridge", "temporal-proto-runtime-bridge/cli"]

[build-dependencies]
prost-build = { workspace = true }
