[package]
name = "job-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "job-worker"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
futures-util.workspace = true
async-trait.workspace = true
jobs-proto = { path = "../jobs-proto" }
temporalio-sdk.workspace = true
temporalio-sdk-core.workspace = true
temporalio-client.workspace = true
temporalio-common.workspace = true
temporalio-macros.workspace = true
prost.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
