[package]
name = "jobctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "jobctl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
jobs-proto = { path = "../jobs-proto" }
temporalio-client.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
